@@ -7,6 +7,7 @@ indexserver =
 [testenv]
 commands=py.test --junitxml={envlogdir}/junit-{envname}.xml []
 deps=pytest
+     py
 
 [testenv:py27-xdist]
 commands=py.test -n5 --junitxml={envlogdir}/junit-{envname}.xml []
