@@ -2,6 +2,10 @@
 -----------------
 
 - fix issue3 - fix example on frontpage
+- fixed/enhanced: except for initial install always call use "-U
+  --no-deps" for installing the sdist package to ensure that a package
+  gets upgraded even if its version number did not change. (reported on
+  TIP mailing list and IRC)
 
 1.0
 -----------------
